[gd_scene load_steps=9 format=3 uid="uid://ph8lv48u78r6"]

[ext_resource type="Script" uid="uid://cqxysm5fanui7" path="res://scenes/profile_menu.gd" id="1_criep"]
[ext_resource type="Theme" uid="uid://bdhp2uvk0sxwp" path="res://themes/war_theme.tres" id="2_idevp"]
[ext_resource type="StyleBox" uid="uid://d25cyx1xh6irc" path="res://themes/red_style_box.tres" id="3_17re5"]
[ext_resource type="StyleBox" uid="uid://bqnx7lnidxkec" path="res://themes/dark_red_style_box.tres" id="4_3tcqg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a62h7"]
bg_color = Color(0.305882, 0.164706, 0.156863, 1)
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 0.231373, 0.231373, 1)
border_blend = true
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65aiq"]
bg_color = Color(0.388235, 0.243137, 0.239216, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkglf"]
bg_color = Color(0.231373, 0.117647, 0.113725, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7xco"]
bg_color = Color(0.121569, 0.164706, 0.180392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.239216, 0.94902, 0.639216, 1)
corner_radius_top_left = 24
corner_detail = 10
shadow_size = 6

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_criep")

[node name="Panel_Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_idevp")

[node name="Label_ProfileSelect" type="Label" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -159.5
offset_top = 32.0
offset_right = 159.5
offset_bottom = 77.0
grow_horizontal = 2
theme = ExtResource("2_idevp")
theme_override_font_sizes/font_size = 32
text = "SELECT A PROFILE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Profile_Select1" type="Button" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_idevp")
text = "CREATE NEW"

[node name="Button_Profile_Delete1" type="Button" parent="Panel_Background/Button_Profile_Select1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -32.0
offset_right = 192.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_hover_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_focus_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_a62h7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_65aiq")
theme_override_styles/hover = ExtResource("3_17re5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vkglf")
theme_override_styles/normal = ExtResource("4_3tcqg")
text = "X
"

[node name="Panel" type="Panel" parent="Panel_Background/Button_Profile_Select1"]
layout_mode = 0
offset_left = -64.0
offset_bottom = 64.0
theme = ExtResource("2_idevp")
theme_type_variation = &"HighlightedPanel"
theme_override_styles/panel = SubResource("StyleBoxFlat_a7xco")

[node name="Label_Profile1" type="Label" parent="Panel_Background/Button_Profile_Select1/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.685
offset_top = -32.0
offset_right = 30.315
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_idevp")
theme_type_variation = &"HeaderLarge"
text = "1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Profile_Select2" type="Button" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_idevp")
text = "CREATE NEW"

[node name="Button_Profile_Delete2" type="Button" parent="Panel_Background/Button_Profile_Select2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -32.0
offset_right = 192.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_hover_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_focus_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_a62h7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_65aiq")
theme_override_styles/hover = ExtResource("3_17re5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vkglf")
theme_override_styles/normal = ExtResource("4_3tcqg")
text = "X
"

[node name="Panel" type="Panel" parent="Panel_Background/Button_Profile_Select2"]
layout_mode = 0
offset_left = -64.0
offset_bottom = 64.0
theme = ExtResource("2_idevp")
theme_type_variation = &"HighlightedPanel"
theme_override_styles/panel = SubResource("StyleBoxFlat_a7xco")

[node name="Label_Profile2" type="Label" parent="Panel_Background/Button_Profile_Select2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.685
offset_top = -32.0
offset_right = 30.315
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_idevp")
theme_type_variation = &"HeaderLarge"
text = "2:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Profile_Select3" type="Button" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_idevp")
text = "CREATE NEW"

[node name="Button_Profile_Delete3" type="Button" parent="Panel_Background/Button_Profile_Select3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -32.0
offset_right = 192.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_hover_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_focus_color = Color(1, 0.901961, 0.901961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_a62h7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_65aiq")
theme_override_styles/hover = ExtResource("3_17re5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vkglf")
theme_override_styles/normal = ExtResource("4_3tcqg")
text = "X
"

[node name="Panel" type="Panel" parent="Panel_Background/Button_Profile_Select3"]
layout_mode = 0
offset_left = -64.0
offset_bottom = 64.0
theme = ExtResource("2_idevp")
theme_type_variation = &"HighlightedPanel"
theme_override_styles/panel = SubResource("StyleBoxFlat_a7xco")

[node name="Label_Profile3" type="Label" parent="Panel_Background/Button_Profile_Select3/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.685
offset_top = -32.0
offset_right = 30.315
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_idevp")
theme_type_variation = &"HeaderLarge"
text = "3:"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel_Background/Button_Profile_Select1" to="." method="_on_button_profile_select_1_pressed"]
[connection signal="pressed" from="Panel_Background/Button_Profile_Select1/Button_Profile_Delete1" to="." method="_on_button_profile_delete_1_pressed"]
[connection signal="pressed" from="Panel_Background/Button_Profile_Select2" to="." method="_on_button_profile_select_2_pressed"]
[connection signal="pressed" from="Panel_Background/Button_Profile_Select2/Button_Profile_Delete2" to="." method="_on_button_profile_delete_2_pressed"]
[connection signal="pressed" from="Panel_Background/Button_Profile_Select3" to="." method="_on_button_profile_select_3_pressed"]
[connection signal="pressed" from="Panel_Background/Button_Profile_Select3/Button_Profile_Delete3" to="." method="_on_button_profile_delete_3_pressed"]
